--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -44,6 +44,9 @@ jobs:
 
       - name: Build TailwindCSS
         run: npm run build # Asegúrate de que este comando compile los estilos de Tailwind
+
+      - name: Build Site
+        run: npm run start
       
       - name: Build with Hugo
         env:
