--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: ''
+baseURL: 'https://ghector6.github.io/test/'
 title: Maestro Taquero
 languageCode: en-us
 DefaultContentLanguage: en
@@ -146,7 +146,7 @@ params:
     twitter:
       enabled: true
       url: 'https://twitter.com/nusserstudios'
-    
+
 
 menu:
   main:
