layouts maestro.9 canonifyfalse changed baseurl

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://ghector6.github.io/'
+baseURL: 'https://ghector6.github.io/test/'
 title: Maestro Taquero
 languageCode: en-us
 DefaultContentLanguage: en
