--- a/hugo.yaml
+++ b/hugo.yaml
@@ -46,6 +46,7 @@ markup:
       xhtml: false
 
 params:
+  card_image: /images/featured/blocard.png
   author: Grupo Maestro Taquero
   authorimage: ../assets/images/global/author.webp
   og_image: /images/tailbliss-cover.png
