--- a/hugo.yaml
+++ b/hugo.yaml
@@ -48,7 +48,7 @@ markup:
 params:
   card_image: /images/featured/blocard.png
   author: Grupo Maestro Taquero
-  authorimage: ../assets/images/global/author.webp
+  authorimage: /images/site-logo.png
   og_image: /images/tailbliss-cover.png
   moto: "Herencia de inovacion continua"
   description: "Maestro Taquero  es un concepto que rinde homenaje a las creaciones y aportaciones gastronómicas que hicieron exitosos a nuestros maestros taqueros, reuniendo productos de gran calidad y combinándola con los mejores destilados. "
